# LabsS5

./: .gitignore  README.md  Title.docx  lab2report.txt  substr1.asm
Lab1/: Report.docx
Lab2/: Report.docx  client.cpp  server.cpp
Project2/: Project2.slnx
Project2/Project2/: 2.asm  Project2.vcxproj  Project2.vcxproj.filters
Project2/Project2/Debug/: Project2.exe.recipe  Project2.ilk
Project2/Project2/Debug/Project2.tlog/: Masm.read.1u.tlog  Masm.write.1u.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project2/Project2/x64/Debug/Project2.tlog/: Masm.read.1u.tlog  Masm.write.1u.tlog  Project2.lastbuildstate
lab1/: Report.docx  ~$Title.docx
lab2/: Makefile  about.html  decoder.cpp  encoder.cpp  gui.py  index.html  input_P1.txt  input_P2.txt  input_uniform.txt  prob_uniform.txt  readme_отчёт.txt  styles.css  title.html
lab3/: CMakeLists.txt  README.md  Report.docx  about.html  client.cpp  common.h  package-lock.json  package.json  server.cpp
lab3/data/: comments.db
lab3/public/: styles.css
lab3/public/js/: comments.js
lab3/server/: index.js
lab3/src/: CMakeLists.txt  main.cpp
lab3/src/back/: CodingAlgorithms.cpp  CodingAlgorithms.hpp
lab3/src/front/: main.qml
lab3/src/front/MyComponents/: fileInput.qml
lab4/: CMakeLists.txt  README.md  Report.docx  bot.js  database.js  main.cpp  package-lock.json  package.json  tasks.db
lab4/src/: CMakeLists.txt  main.cpp
lab4/src/back/: EncryptAlgorithms.cpp  EncryptAlgorithms.hpp
lab4/src/front/: main.qml
lab4/src/front/MyComponents/: styledTextArea.qml
lab5/: Report.docx  main.cpp  ping.cpp
lab5/src/: CMakeLists.txt  main.cpp
lab5/src/back/: Generator.cpp  Generator.hpp
lab5/src/front/: main.qml  resources.qrc
lab5/src/front/MyComponents/: qmldir
нп3/: main.cpp  отчёт 3.txt
нп4/: main.cpp  substr1.asm
